--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -22,11 +22,10 @@ let views = 0;
           <a href="https://github.com/Steven96lg" target="_blank" rel="noopener">
               <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 24 24"><path fill="#000000" d="M12 2A10 10 0 0 0 2 12c0 4.42 2.87 8.17 6.84 9.5c.5.08.66-.23.66-.5v-1.69c-2.77.6-3.36-1.34-3.36-1.34c-.46-1.16-1.11-1.47-1.11-1.47c-.91-.62.07-.6.07-.6c1 .07 1.53 1.03 1.53 1.03c.87 1.52 2.34 1.07 2.91.83c.09-.65.35-1.09.63-1.34c-2.22-.25-4.55-1.11-4.55-4.92c0-1.11.38-2 1.03-2.71c-.1-.25-.45-1.29.1-2.64c0 0 .84-.27 2.75 1.02c.79-.22 1.65-.33 2.5-.33s1.71.11 2.5.33c1.91-1.29 2.75-1.02 2.75-1.02c.55 1.35.2 2.39.1 2.64c.65.71 1.03 1.6 1.03 2.71c0 3.82-2.34 4.66-4.57 4.91c.36.31.69.92.69 1.85V21c0 .27.16.59.67.5C19.14 20.16 22 16.42 22 12A10 10 0 0 0 12 2"/></svg>
           </a>
-        </div>
-            <a href="/blog/about">
-            <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" viewBox="0 0 24 24"><path fill="#333333" fill-rule="evenodd" d="M5 1a4 4 0 0 0-4 4v14a4 4 0 0 0 4 4h14a4 4 0 0 0 4-4V5a4 4 0 0 0-4-4zM4 15.182V9h1.09v.693C5.572 9.328 6.232 9 7.092 9c.397 0 .863.115 1.246.357c.14.088.276.2.394.333A3.2 3.2 0 0 1 10.727 9c.397 0 .864.115 1.247.357c.39.247.753.671.753 1.28v4.545h-1.09v-4.546c0-.119-.061-.24-.246-.357a1.3 1.3 0 0 0-.664-.188c-.746 0-1.256.357-1.636.731v4.36H8v-4.546c0-.119-.06-.24-.245-.357a1.3 1.3 0 0 0-.664-.188c-.98 0-1.514.59-1.93 1.049l-.07.077v3.965zm10.984-2.546H20v-.545a3.09 3.09 0 1 0-.665 1.916l-.856-.677a2 2 0 0 1-3.495-.694m1.925-2.545a2 2 0 0 0-1.925 1.455h3.85a2 2 0 0 0-1.925-1.455" clip-rule="evenodd"/></svg>
+           <a href="/blog/about">
+              <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" viewBox="0 0 24 24"><path fill="#333333" fill-rule="evenodd" d="M5 1a4 4 0 0 0-4 4v14a4 4 0 0 0 4 4h14a4 4 0 0 0 4-4V5a4 4 0 0 0-4-4zM4 15.182V9h1.09v.693C5.572 9.328 6.232 9 7.092 9c.397 0 .863.115 1.246.357c.14.088.276.2.394.333A3.2 3.2 0 0 1 10.727 9c.397 0 .864.115 1.247.357c.39.247.753.671.753 1.28v4.545h-1.09v-4.546c0-.119-.061-.24-.246-.357a1.3 1.3 0 0 0-.664-.188c-.746 0-1.256.357-1.636.731v4.36H8v-4.546c0-.119-.06-.24-.245-.357a1.3 1.3 0 0 0-.664-.188c-.98 0-1.514.59-1.93 1.049l-.07.077v3.965zm10.984-2.546H20v-.545a3.09 3.09 0 1 0-.665 1.916l-.856-.677a2 2 0 0 1-3.495-.694m1.925-2.545a2 2 0 0 0-1.925 1.455h3.85a2 2 0 0 0-1.925-1.455" clip-rule="evenodd"/></svg>
             </a>
-          <div class="views"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 12 12"><path fill="#666666" d="M4 9h3V8h1V5H7V4h1v1h1v1h1V4H9V3H8V2H3v1H2v1H1v2h1V5h1V4h1v1H3v3h1Zm-2 1h1V9H2ZM1 9h1V8H1ZM0 8h1V6H0Zm3 3h5v-1H3Zm5-1h1V9H8ZM6 7V6H5V5h1v1h1v1Zm3 2h1V8H9Zm1-1h1V6h-1Zm0 0"/></svg><span>{views}</span></div>
+        </div>
       </div>
 </nav>
 
@@ -193,6 +192,33 @@ nav .theme-lang  .social-media {
         & a{
             text-decoration: none;
         }
+}
+@media (max-width: 480px){
+		nav{
+      padding: 0;
+      display: flex;
+    }
+    nav .home-redirect {
+      color: black;
+      text-decoration: none;
+      display: flex;
+      width: 80px;
+      font-weight: 500;
+      color: rgb(104, 104, 104);
+    }
+    nav .theme-lang  .social-media {
+        display: flex;
+        gap: 0;
+        align-items: center;
+        & a{
+            text-decoration: none;
+            transition: all 0.3s ease;
+        }
+        & a:hover svg {
+          transform: scale(1.15);
+          filter: drop-shadow(0 2px 8px rgba(0, 0, 0, 0.15));
+        }
     }
 
+	}
 </style>
